--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
           </div>
         </div>
       </section>
+
+      <!-- ----------------------------FOOTER SECTION---------------------------- -->
+      <footer class="footer">
+        <div class="footer_inner">
+          <img src="./images/flash_logo2.png" alt="logo" class="footer_logo" />
+          <p class="footer_text">all right reserved</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
