chores: adding pre-loader section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./styles/styles.css" />
+    <script defer src="./index.js"></script>
     <title>flashupdate.ng.com</title>
   </head>
   <body>
+    <!-- Loader -->
+    <div id="preloader_sec" class="preloader">
+      <div class="preloader_inner"></div>
+    </div>
     <!-- ----------------------------HEADER/NAV SECTION---------------------------- -->
     <header id="nav_sec">
       <div class="navbar animations_left">
