--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <section class="hero_sec">
         <div class="hero_sec_inner">
           <div class="hero_header">
-            <h2>Welcome to Flashupdates9ja</h2>
+            <h2>Welcome to Flashupdate9ja</h2>
           </div>
           <div class="hero_bottom">
             <div class="hero_bottom_left">
@@ -122,6 +122,8 @@
 
                   <p>Buy data and airtime in cheap price.</p>
                 </div>
+
+                <button class="offer_box_btn">subscribe</button>
               </div>
             </div>
             <!-- BOX -->
@@ -134,6 +136,7 @@
 
                   <p>Get latest Nigeria News from verified authors.</p>
                 </div>
+                <button class="offer_box_btn">subscribe</button>
               </div>
             </div>
             <!-- BOX -->
@@ -145,6 +148,7 @@
                   <h3>Flash Digital Courses</h3>
                   <p>Learn digital courses with easy.</p>
                 </div>
+                <button class="offer_box_btn">subscribe</button>
               </div>
             </div>
           </div>
