chores: updated hero section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
                 <li>Services</li>
               </a>
               <a href="#!">
+                <li>LiveScores</li>
+              </a>
+              <a href="#!">
                 <li>Blog</li>
+              </a>
+              <a href="#!">
+                <li>Advert Enquiries</li>
               </a>
               <a href="#!">
                 <li>Contact us</li>
@@ -62,20 +68,26 @@
 
       <div class="dropdown_menu">
         <ul class="menu_lists">
-          <a href="#nav_sec">
+          <a href="#!">
             <li class="active">Home</li>
           </a>
-          <a href="#about_id">
+          <a href="#!">
             <li>About us</li>
           </a>
-          <a href="#services_id">
+          <a href="#!">
             <li>Services</li>
           </a>
-          <a href="#contact_id">
-            <li>Contact us</li>
+          <a href="#!">
+            <li>LiveScores</li>
           </a>
-          <a href="#news_id">
+          <a href="#!">
             <li>Blog</li>
+          </a>
+          <a href="#!">
+            <li>Advert Enquiries</li>
+          </a>
+          <a href="#!">
+            <li>Contact us</li>
           </a>
         </ul>
       </div>
@@ -88,6 +100,8 @@
         <div class="hero_sec_inner">
           <div class="hero_header">
             <h2>Welcome to Flashupdate9ja</h2>
+
+            <img src="./gifs/gif.gif" alt="ads" class="gif" />
           </div>
           <div class="hero_bottom">
             <div class="hero_bottom_left">
