--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </ul>
           </div>
 
-          <div class="toogle_btn">
+          <div class="toogle_btn animations_left">
             <i class="fa fa-bars"></i>
           </div>
         </div>
@@ -68,25 +68,25 @@
 
       <div class="dropdown_menu">
         <ul class="menu_lists">
-          <a href="#!">
+          <a href="#!" class="animations_left">
             <li class="active">Home</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_right">
             <li>About us</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_left">
             <li>Services</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_right">
             <li>LiveScores</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_left">
             <li>Blog</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_right">
             <li>Advert Enquiries</li>
           </a>
-          <a href="#!">
+          <a href="#!" class="animations_left">
             <li>Contact us</li>
           </a>
         </ul>
@@ -96,22 +96,22 @@
     <!-- ----------------------------MAIN SECTION---------------------------- -->
     <main>
       <!-- ----------------------------HERO SECTION---------------------------- -->
-      <section class="hero_sec">
+      <section class="hero_sec animations_down">
         <div class="hero_sec_inner">
           <div class="hero_header">
-            <h2>Welcome to Flashupdate9ja</h2>
+            <h2 class="animations_up">Welcome to Flashupdate9ja</h2>
 
             <img src="./gifs/gif.gif" alt="ads" class="gif" />
           </div>
           <div class="hero_bottom">
-            <div class="hero_bottom_left">
+            <div class="hero_bottom_left animations_right">
               <p>
                 We are a News/entertainment media || A telecom company, || A
                 digital marketplace for buying/selling products and services.
               </p>
             </div>
 
-            <div class="hero_bottom_right">
+            <div class="hero_bottom_right animations_left">
               <img src="./images/hero_img.png" alt="hero-images" />
             </div>
           </div>
@@ -119,7 +119,7 @@
       </section>
 
       <!-- ----------------------------WE OFFER SECTION---------------------------- -->
-      <section class="we_offer">
+      <section class="we_offer animations_up">
         <div class="we_offer_inner">
           <div class="we_offer_header">
             <h3>services we offer</h3>
@@ -127,7 +127,7 @@
           <!-- BOX-SECTION -->
           <div class="offer_box_sec">
             <!-- BOX -->
-            <div class="offer_box">
+            <div class="offer_box animations_left">
               <div class="offer_box_inner">
                 <img src="./images/icon1.png" alt="logo" class="logo" />
 
@@ -141,7 +141,7 @@
               </div>
             </div>
             <!-- BOX -->
-            <div class="offer_box">
+            <div class="offer_box animations_right">
               <div class="offer_box_inner">
                 <img src="./images/icon2.png" alt="logo" class="logo" />
 
@@ -154,7 +154,7 @@
               </div>
             </div>
             <!-- BOX -->
-            <div class="offer_box">
+            <div class="offer_box animations_left">
               <div class="offer_box_inner">
                 <img src="./images/icon3.png" alt="logo" class="logo" />
 
@@ -170,7 +170,7 @@
       </section>
 
       <!-- ----------------------------FOOTER SECTION---------------------------- -->
-      <footer class="footer">
+      <footer class="footer animations_up">
         <div class="footer_inner">
           <img src="./images/flash_logo2.png" alt="logo" class="footer_logo" />
           <p class="footer_text">all right reserved</p>
