fix/bug: drop-menu-section animation

--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
       <!--       DROPDOWN MENU       -->
 
       <div class="dropdown_menu">
-        <ul class="menu_lists">
-          <a href="#!" class="animations_left">
+        <ul class="menu_lists animations_right">
+          <a href="#!">
             <li class="active">Home</li>
           </a>
-          <a href="#!" class="animations_right">
+          <a href="#!">
             <li>About us</li>
           </a>
-          <a href="#!" class="animations_left">
+          <a href="#!">
             <li>Services</li>
           </a>
-          <a href="#!" class="animations_right">
+          <a href="#!">
             <li>LiveScores</li>
           </a>
-          <a href="#!" class="animations_left">
+          <a href="#!">
             <li>Blog</li>
           </a>
-          <a href="#!" class="animations_right">
+          <a href="#!">
             <li>Advert Enquiries</li>
           </a>
-          <a href="#!" class="animations_left">
+          <a href="#!">
             <li>Contact us</li>
           </a>
         </ul>
