chores: updated things

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" sizes="192x192" href="./images/flash_logo.jpg" />
-    <link rel="apple-touch-icon" href="./images/flash_logo.jpg" />
+    <link rel="icon" sizes="192x192" href="./images/flash_logo3.jpeg" />
+    <link rel="apple-touch-icon" href="./images/flash_logo3.jpeg" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="./styles/styles.css" />
     <script defer src="./index.js"></script>
-    <title>flashupdate.ng.com</title>
+    <title>flashupdates.ng.com</title>
   </head>
   <body>
     <!-- Loader -->
@@ -34,25 +34,25 @@
 
           <div class="menu_items">
             <ul class="menu_lists">
-              <a href="#!">
+              <a href="#nav_sec">
                 <li class="active">Home</li>
               </a>
-              <a href="#!">
+              <a href="#footer_id">
                 <li>About us</li>
               </a>
-              <a href="#!">
+              <a href="#we_offer_id">
                 <li>Services</li>
               </a>
-              <a href="#!">
+              <a href="#we_offer_id">
                 <li>LiveScores</li>
               </a>
-              <a href="#!">
+              <a href="https://news.flashupdates.com.ng" target="_blank">
                 <li>Blog</li>
               </a>
-              <a href="#!">
+              <a href="#footer_id">
                 <li>Advert Enquiries</li>
               </a>
-              <a href="#!">
+              <a href="#footer_id">
                 <li>Contact us</li>
               </a>
             </ul>
@@ -68,25 +68,25 @@
 
       <div class="dropdown_menu">
         <ul class="menu_lists animations_right">
-          <a href="#!">
+          <a href="#nav_id">
             <li class="active">Home</li>
           </a>
-          <a href="#!">
+          <a href="#footer_id">
             <li>About us</li>
           </a>
-          <a href="#!">
+          <a href="#we_offer_id">
             <li>Services</li>
           </a>
-          <a href="#!">
+          <a href="#we_offer_id">
             <li>LiveScores</li>
           </a>
-          <a href="#!">
+          <a href="https://news.flashupdates.com.ng" target="_blank">
             <li>Blog</li>
           </a>
-          <a href="#!">
+          <a href="#footer_id">
             <li>Advert Enquiries</li>
           </a>
-          <a href="#!">
+          <a href="#footer_id">
             <li>Contact us</li>
           </a>
         </ul>
@@ -119,7 +119,7 @@
       </section>
 
       <!-- ----------------------------WE OFFER SECTION---------------------------- -->
-      <section class="we_offer animations_up">
+      <section id="we_offer_id" class="we_offer animations_up">
         <div class="we_offer_inner">
           <div class="we_offer_header">
             <h3>services we offer</h3>
@@ -132,12 +132,16 @@
                 <img src="./images/icon1.png" alt="logo" class="logo" />
 
                 <div class="offer_box_text">
-                  <h3>Flash Telecom</h3>
+                  <h3>FLASH TELECOM</h3>
 
-                  <p>Buy data and airtime in cheap price.</p>
+                  <p>
+                    Automated & Instant Delivery; MTN, GOtv, PHED, Airtel,
+                    Startimes, WAEC, 9mobile, DSTV, etc.
+                  </p>
                 </div>
-
-                <button class="offer_box_btn">subscribe</button>
+                <a href="https://vtu.flashupdates.com.ng" target="_blank">
+                  <button class="offer_box_btn">GET STARTED</button>
+                </a>
               </div>
             </div>
             <!-- BOX -->
@@ -146,11 +150,17 @@
                 <img src="./images/icon2.png" alt="logo" class="logo" />
 
                 <div class="offer_box_text">
-                  <h3>Flash News</h3>
+                  <h3>FLASH NEWS</h3>
 
-                  <p>Get latest Nigeria News from verified authors.</p>
+                  <p>
+                    Become a verified author and get paid in Dollars directly to
+                    your bank account weekly/monthly..
+                  </p>
                 </div>
-                <button class="offer_box_btn">subscribe</button>
+
+                <a href="https://news.flashupdates.com.ng" target="_blank">
+                  <button class="offer_box_btn">GET STARTED</button>
+                </a>
               </div>
             </div>
             <!-- BOX -->
@@ -159,10 +169,17 @@
                 <img src="./images/icon3.png" alt="logo" class="logo" />
 
                 <div class="offer_box_text">
-                  <h3>Flash Digital Courses</h3>
-                  <p>Learn digital courses with easy.</p>
+                  <h3>FLASH MARKETPLACE</h3>
+                  <p>
+                    Your online marketplace for swift ads and auctions.
+                    Seamlessly post ads, and engage in efficient auctions.
+                    Simplify buying and selling through our user-friendly
+                    platform. .
+                  </p>
                 </div>
-                <button class="offer_box_btn">subscribe</button>
+                <a href="https://market.flashupdates.com.ng/" target="_blank">
+                  <button class="offer_box_btn">GET STARTED</button>
+                </a>
               </div>
             </div>
           </div>
@@ -170,12 +187,12 @@
       </section>
 
       <!-- -----------------------FOOTER SECTION---------------------- -->
-      <footer class="container_main">
-        <div class="footer_inner animations_up">
+      <footer id="footer_id" class="container_main">
+        <div class="footer_inner animations_left">
           <div class="footer_left">
             <div>
               <img
-                src="./images/flash_logo2.png"
+                src="./images/flash_logo3.jpeg"
                 alt="logo"
                 class="footer_logo"
               />
@@ -184,8 +201,8 @@
             </div>
             <p class="small_text text_light">
               With flashupdate9ja you can purchase VTU subscriptions, Become a
-              writer and get paid in Dollars and also Buy/sell of digital
-              products across the globe.
+              writer and get paid in Dollars and also Buy/sell of digital/Non
+              digital products across the globe.
             </p>
           </div>
           <div class="footer_right">
@@ -256,23 +273,23 @@
                       />
                     </svg>
                   </span>
-                  Akwa Ibom Uyo
+                  Akwa Ibom Uyo, Nigeria
                 </li>
               </ul>
             </div>
 
             <div class="quick_links">
-              <h3>Quick Links</h3>
+              <h3>Legal</h3>
 
               <ul class="menu_lists">
-                <a class="link_text" href="#!">
-                  <li>Home</li>
+                <a class="link_text" href="./privacy.html">
+                  <li>privacy policy</li>
                 </a>
-                <a class="link_text" href="#!">
-                  <li>Our Team</li>
+                <a class="link_text" href="./refundpolicy.html">
+                  <li>Refund policy</li>
                 </a>
-                <a class="link_text" href="#!">
-                  <li>Contact</li>
+                <a class="link_text" href="./service.html">
+                  <li>terms & conditions</li>
                 </a>
               </ul>
             </div>
