chores: updated things

--- a/privacy.html
+++ b/privacy.html
@@ -117,7 +117,7 @@
 
     <!-- PRIVACY CONTENTS -->
     <div>
-      <div class="contents_sec animations_left">
+      <div class="contents_sec">
         <p>
           <br />
           <br />> This Privacy Policy describes Our policies and procedures on
