--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -117,7 +117,7 @@
 
     <!-- PRIVACY CONTENTS -->
     <div>
-      <div class="contents_sec animations_left">
+      <div class="contents_sec">
         <h2 class="animations_left">Flashupdate9ja Refund Policy</h2>
         <p class="animations_left">
           As a buyer, your purchases are 'backed' by Flashupdate9ja 30-Day money
