chores: updated things

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <div class="navbar animations_left">
         <div class="navbar_inner">
           <a href="#nav_sec">
-            <img src="./images/flash_logo2.png" alt="logo" class="nav_logo" />
+            <img src="./images/flash_logo3.jpeg" alt="logo" class="nav_logo" />
           </a>
 
           <div class="menu_items">
             <ul class="menu_lists">
-              <a href="#nav_sec">
+              <a href="./index.html">
                 <li class="active">Home</li>
               </a>
               <a href="#footer_id">
@@ -43,7 +43,7 @@
               <a href="#we_offer_id">
                 <li>Services</li>
               </a>
-              <a href="#we_offer_id">
+              <a href="./livescores.html">
                 <li>LiveScores</li>
               </a>
               <a href="https://news.flashupdates.com.ng" target="_blank">
