--- a/service.html
+++ b/service.html
@@ -77,9 +77,9 @@
           <a href="#we_offer_id">
             <li>Services</li>
           </a>
-          <a href="#we_offer_id">
-            <li>LiveScores</li>
-          </a>
+          <a href="./livescores.html">
+                <li>LiveScores</li>
+              </a>
           <a href="https://news.flashupdates.com.ng" target="_blank">
             <li>Blog</li>
           </a>
