--- a/privacy.html
+++ b/privacy.html
@@ -77,7 +77,7 @@
           <a href="#we_offer_id">
             <li>Services</li>
           </a>
-          <a href="#we_offer_id">
+          <a href="./livescores.html">
             <li>LiveScores</li>
           </a>
           <a href="https://news.flashupdates.com.ng" target="_blank">
