chores: updated things

--- a/index.html
+++ b/index.html
@@ -254,8 +254,12 @@
                       />
                     </svg>
                   </span>
-                  <a class="link_text" href="mailto:example@gmail.com">
-                    Support@flashupdates.com.ng
+                  <a
+                    class="link_text"
+                    href="                    support@flashupdates.com.ng
+"
+                  >
+                    support@flashupdates.com.ng
                   </a>
                 </li>
                 <li>
