--- a/privacy.html
+++ b/privacy.html
@@ -503,7 +503,7 @@
           <br />
           <br />
           By email:
-          <a class="link_text" href="mailto:example@gmail.com">
+          <a class="link_text" href="support@flashupdates.com.ng">
             support@flashupdates.com.ng
           </a>
 
@@ -588,7 +588,7 @@
                     />
                   </svg>
                 </span>
-                <a class="link_text" href="mailto:example@gmail.com">
+                <a class="link_text" href="support@flashupdates.com.ng">
                   support@flashupdates.com.ng
                 </a>
               </li>
