--- a/refundpolicy.html
+++ b/refundpolicy.html
@@ -318,7 +318,7 @@
                     />
                   </svg>
                 </span>
-                <a class="link_text" href="mailto:example@gmail.com">
+                <a class="link_text" href="support@flashupdates.com.ng">
                   support@flashupdates.com.ng
                 </a>
               </li>
