--- a/service.html
+++ b/service.html
@@ -620,8 +620,9 @@
                       />
                     </svg>
                   </span>
-                  <a class="link_text" href="mailto:example@gmail.com">
-                    Support@flashupdates.com.ng
+                  <a class="link_text" href="                    support@flashupdates.com.ng
+">
+                    support@flashupdates.com.ng
                   </a>
                 </li>
                 <li>
