chores: updated things

--- a/service.html
+++ b/service.html
@@ -28,13 +28,13 @@
     <header id="nav_sec">
       <div class="navbar animations_left">
         <div class="navbar_inner">
-          <a href="#nav_sec">
+           <a href="./index.html">
             <img src="./images/flash_logo3.jpeg" alt="logo" class="nav_logo" />
           </a>
 
           <div class="menu_items">
             <ul class="menu_lists">
-              <a href="#nav_sec">
+               <a href="./index.html">
                 <li class="active">Home</li>
               </a>
               <a href="#footer_id">
@@ -68,7 +68,7 @@
 
       <div class="dropdown_menu">
         <ul class="menu_lists animations_right">
-          <a href="#nav_id">
+            <a href="./index.html">
             <li class="active">Home</li>
           </a>
           <a href="#footer_id">
