chores: updated things

--- a/privacy.html
+++ b/privacy.html
@@ -632,6 +632,7 @@
 
       <div class="footer_bottom">
         <p>&copy;2023 Flashupdate9ja, All rights reserved</p>
+        <p><b>CAC Number:</b> <u>3629432</u></p>
       </div>
     </footer>
   </body>
