--- a/service.html
+++ b/service.html
@@ -664,7 +664,8 @@
         </div>
 
         <div class="footer_bottom">
-          <p>&copy;2023 Flashupdate9ja, All rights reserved</p>
+         <p>&copy;2023 Flashupdate9ja, All rights reserved</p>
+          <p><b>CAC Number:</b> <u>3629432</u></p>
         </div>
       </footer>
   </body>
